# lightrag-mcp

./: Dockerfile  docker-compose.yml  documentation.md  index.html  mcp_v0.py  pyproject.toml  readme.md  test_integration_file_001.txt  test_lightrag.py  tracker.py  update.py
lib/: db.py  lightrag.py  processing.py  util.py
