[project]
name = "dataset-alpha"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-identity>=1.25.3",
    "httpx>=0.28.1",
    "lightrag-mcp>=0.1.1",
    "numpy>=2.4.6",
    "openai>=2.38.0",
    "pathlib>=1.0.1",
    "python-dotenv>=1.2.2",
]
